--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,14 @@
         android:paddingLeft="10dp"
         android:paddingTop="10dp">
 
+        <EditText
+            android:id="@+id/name_description_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/user_name"
+            android:inputType="textMultiLine"
+            android:layout_marginRight="16dp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,6 +36,14 @@
             android:layout_marginBottom="16dp"
             android:paddingLeft="24dp"
             android:text="@string/whipped_cream_checkbox"
+            android:textSize="16sp" />
+        <CheckBox
+            android:id="@+id/chocolate_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:paddingLeft="24dp"
+            android:text="@string/chocolate_checkbox"
             android:textSize="16sp" />
 
         <TextView
