--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="Quantity"
+            android:text="@string/quantity"
             android:textAllCaps="true" />
 
         <LinearLayout
@@ -63,7 +63,7 @@
                 android:layout_height="48dp"
                 android:layout_marginRight="8dp"
                 android:onClick="decrement"
-                android:text="-"
+                android:text="@string/decrement"
                 android:textAllCaps="true" />
 
 
@@ -71,7 +71,7 @@
                 android:id="@+id/quantity_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/zero_price"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -81,7 +81,7 @@
                 android:layout_height="48dp"
                 android:layout_marginLeft="8dp"
                 android:onClick="increment"
-                android:text="+"
+                android:text="@string/increment"
                 android:textAllCaps="true" />
         </LinearLayout>
 
@@ -90,14 +90,14 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
-            android:text="Order Summary"
+            android:text="@string/order_summary"
             android:textAllCaps="true" />
 
         <TextView
             android:id="@+id/order_summary_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$0"
+            android:text="@string/total_price"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:onClick="submitOrder"
-            android:text="Order"
+            android:text="@string/order"
             android:textAllCaps="true" />
 
     </LinearLayout>
